--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&family=Pushster&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section id="part-one">
-        <div class="left-side">
-            <h1>Welcome To</h1>
-            <h1><span class="orange-color">Md. Imran Hossain bhuiyan's</span> World</h1>
-        </div>
-    </section>
+        <section id="part-one">
+                <div class="left-side">
+                    <h1>Welcome To</h1>
+                    <h1><span class="orange-color">Md. Imran Hossain bhuiyan's</span> World</h1>
+                    <h4>Build Climber and Train Stopper</h4>
+                    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                </div>
+                <div class="right-side">
+                    <img src="./images/my-bg.png" alt="my-bg">
+                </div>
+        </section>
 </body>
 </html>
