--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <h1><span class="orange-color">Md. Imran Hossain bhuiyan's</span> World</h1>
                     <h4>Build Climber and Train Stopper</h4>
                     <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                    <a target="_blank" href="https://www.linkedin.com/in/md-imran-hossain-bhuiyan-48476120a/">Hire me</a>
                 </div>
                 <div class="right-side">
                     <img src="./images/my-bg.png" alt="my-bg">
