--- a/index.html
+++ b/index.html
@@ -30,5 +30,46 @@
                     <img src="./images/my-bg.png" alt="my-bg">
                 </div>
         </section>
+
+        <section id="second-part">
+            <div class="left-part">
+                <img src="./images/my-bg2.png" alt="">
+            </div>
+            <div class="right-part">
+                <h1>
+                    Dream Big
+                </h1>
+                <h4>
+                    Become a web developer
+                </h4>
+                <p>
+                    I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+                </p>
+                <a href="">Download resume</a>
+            </div>
+        </section>
+
+        <section id="bottom-part">
+            <h1>Experiences</h1>
+            <div class="parrent">
+                <div class="card left">
+                    <h3>Full Stack Web Developer</h3>
+                    <h4>2021-Present | Pro Level Developer</h4>
+                    <p>
+                        I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                    </p>
+                </div>
+    
+                <div class="card right">
+                    <h3>Baby Web Developer</h3>
+                    <h4>2020-2021 | Programming Hero Learner</h4>
+                    <p>
+                        They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <footer>© Md. Imran Hossain Bhuiyan 2021, a Programming Hero initiative.</footer>
 </body>
 </html>
